# genetic-circuit-partitioning

./: .gitignore  LICENSE  README.md  partiton_gate_assignment.py  pyproject.toml  requirements.txt
2020.9/runs/: 02_partition_graph.sh  03_modify_partition_sols.sh
2020.9/runs/graph/: DAG20.9.edgelist
2021.4/: circuit_placing.py  gate_assignment.py  graph synthesis.py  graph_randomizer.py  partition.py  plot_results.py
2021.4/runs/: 00_setup.sh  01_generate_edgelist.sh  02_partition_graph.sh  03_5-input_run.sh  03_RG_30.sh  03_RG_n100.sh  03_RG_n20.sh  03_RG_n40.sh  03_RG_n50.sh  03_RG_n60.sh  03_RG_n70.sh  03_RG_n80.sh  03_RG_n90.sh  03_SFG_n100.sh  03_SFG_n100_b2.sh  03_SFG_n20.sh  03_SFG_n30.sh  03_SFG_n40.sh  03_SFG_n50.sh  03_SFG_n60.sh  03_SFG_n70.sh  03_SFG_n70_b2.sh  03_SFG_n80.sh  03_SFG_n80_b2.sh  03_SFG_n90.sh  03_SFG_n90_b2.sh  03_SWG_n100.sh  03_SWG_n20.sh  03_SWG_n30.sh  03_SWG_n40.sh  03_SWG_n50.sh  03_SWG_n60.sh  03_SWG_n70.sh  03_SWG_n80.sh  03_SWG_n90.sh  03_cobra_core.sh  03_module_shifting.sh  03_module_shifting_batch1.sh  03_module_shifting_batch2.sh  03_module_shifting_batch3-1.sh  (+28 more)
archive/runs/: 00_setup.sh  settings.txt
gate assignment/: gate assignment script.py  simulated annealing params.py  simulated annealing partition optimize.py
gate assignment/example_graph/: part_soln.txt
gate assignment/lib/: gatefunction.txt  sensor.txt  statelogic-4input.txt
runs/: 01_synthesize_graphs.sh  settings.txt
runs/graph/: DAG20.1.edgelist  DAG20.3.edgelist  DAG20.5.edgelist  DAG20.8.edgelist
runs/lib/: gatelib.txt  sensor.txt
(+35044 files in other folders)
