[tool.poetry]
name = "genetic-circuit-partitioning"
version = "0.1.0"
description = ""
authors = ["Jing Zhang, W.R. Jackson"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
networkx = "^2.5.1"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
mpmath = "^1.2.1"
metis = "^0.2a5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
